pilot/pkg/security/authz/builder/testdata/http/allow-host-before-111-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - to:
        - operation:
            hosts: [ "example.com", "prefix.example.*", "*.example.com", "*" ]
            notHosts: [ "not-example.com", "prefix.not-example.*", "*.not-example.com", "*" ]
